--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   </head>
 <body>
 
@@ -28,6 +29,9 @@
         </div>
       </nav>
       <br>
+
+      
+
     <div id="app1" class="container">
 
         
@@ -63,11 +67,12 @@
               <button v-on:click="finalsubmit" class="btn btn-primary">Execute</button>
 
               <p id="data_received"></p>
-              
+              <canvas id="chart" ></canvas>
+              <canvas id="chart2" ></canvas>
+
           </div>
           <br>
           <blog-post title="das"></blog-post>
-          
 
    
       
@@ -110,7 +115,9 @@
               success: (data) => {
                 console.log("data")
                 console.log(data)
-                $("#data_received").text(JSON.stringify(data));
+                // $("#data_received").text(JSON.stringify(data));
+                plotGraph1(data["x_data"],data["exy_real"],data["exy_im"]);
+                plotGraph2(data["x_data"],data["ez_real"],data["ez_im"]);
 
               },
               dataType: "json",
@@ -123,7 +130,97 @@
 
       })
 
+      var plotGraph1 = (x,exy_real,exy_im) =>{
+        var chartOptions = {
+            scales: {
+              xAxes: [{
+                scaleLabel: {
+                  display: true,
+                  labelString: 'Wavelength'
+                }
+              }]
+            } ,
+            legend: {
+              display: true,
+              position: 'top',
+              labels: {
+                boxWidth: 80,
+                fontColor: 'black'
+              }
+            }
+          };
 
+          var data = {
+            labels: x,
+            datasets: [{
+              label: "exy real",
+              data: exy_real,
+              fill: false,
+              backgroundColor: "#36a2eb"
+            },
+            {
+              label: "exy imaginary",
+              data: exy_im,
+              fill: false,
+              backgroundColor: "#cc65fe"
+            },
+            ]
+          }
+
+          const ctx = $('#chart');
+          var lineChart = new Chart(ctx, {
+            type: 'line',
+            options: chartOptions,
+            data: data,
+          })
+      };
+
+      var plotGraph2 = (x,exy_real,exy_im) =>{
+        var chartOptions = {
+          scales: {
+              xAxes: [{
+                scaleLabel: {
+                  display: true,
+                  labelString: 'Wavelength'
+                }
+              }]
+            } ,
+            legend: {
+              display: true,
+              position: 'top',
+              labels: {
+                boxWidth: 80,
+                fontColor: 'black'
+              }
+            }
+          };
+
+          var data = {
+            labels: x,
+            datasets: [{
+              label: "ez real",
+              data: exy_real,
+              fill: false,
+              backgroundColor: "#ff6384"
+            },
+            {
+              label: "ez imaginary",
+              data: exy_im,
+              fill: false,
+              backgroundColor: "#ffce56"
+            },
+            ]
+          }
+
+          const ctx = $('#chart2');
+          var lineChart = new Chart(ctx, {
+            type: 'line',
+            options: chartOptions,
+            data: data,
+          })
+      };
+
+      
 
     </script>
 </body>
