--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
             {% endfor %}
           
           </select></p>
-          <p><label for="id_dielectric_material_real">Dielectric material real permitivity:</label> <input type="number" name="dielectric_material_real" value="1" required id="id_dielectric_material_real"></p>
-          <p><label for="id_dielectric_material_complex">Dielectric material complex permitivity:</label> <input type="number" name="dielectric_material_complex" value="0" required id="id_dielectric_material_complex"></p>
+          <p><label for="id_dielectric_material_real">Dielectric material real permitivity:</label> <input type="number" step=0.01 name="dielectric_material_real" value="1" required id="id_dielectric_material_real"></p>
+          <p><label for="id_dielectric_material_complex">Dielectric material complex permitivity:</label> <input type="number" step=0.01 name="dielectric_material_complex" value="0" required id="id_dielectric_material_complex"></p>
           <p><label for="id_polarisation">Specify the polarisation:</label> <select name="polarisation" id="id_polarisation">
             <option value="TE">TE</option>
           
