--- a/templates/index.html
+++ b/templates/index.html
@@ -145,6 +145,8 @@
                 plotGraph2(data["x_data"],data["ez_real"],data["ez_im"]);
                 plotGraph3(data["x_data"],data["t_real"],data["t_imag"]);
                 plotGraph4(data["x_data"],data["r_real"],data["r_imag"]);
+                console.log("Value received");
+                console.log(JSON.stringify(data));
 
               },
               dataType: "json",
